<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/inputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/default_input"
            android:textAlignment="viewEnd"
            android:textSize="50sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1">

                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/cancel_button_text"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/parenthesisButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/paranthesis_button_text"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/percentageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/percentage_button_text"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/divisionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/division_button_text"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1">

                <Button
                    android:id="@+id/number7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/number_7_button_text"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/number8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/number_8_button_tex"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/number9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/number_9_button_tex"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/multiplicationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/multiplication_button_text"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1">

                <Button
                    android:id="@+id/number4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/number_4_button_tex"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/number5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/number_5_button_tex"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/number6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/number_6_button_tex"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/subtractionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/minus_button_text"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1">

                <Button
                    android:id="@+id/number1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/number_1_button_tex"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/number2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/number_2_button_tex"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/number3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/number_3_button_tex"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/additionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/addition_button_text"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1">

                <Button
                    android:id="@+id/plusMinusNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/negative_or_positive_button_text"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/number0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/number_0_button_tex"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/dotButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/dot_button_text"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/equalsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/eqals_button_text"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>